--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
             </div>
          </div>
          <div class="finish-img">
-            <div class="line">
+            <div class="line line1">
                <div class="result block1"></div>
                <div class="result block2"></div>
                <div class="result block3"></div>
@@ -513,6 +513,9 @@
    </div>
  
    <button class="btn start">Start</button>
+
+   <button class="btn reload">reload</button>
+   
    <script src="number.js" type="module"></script>
    <script type="module" src="vars.js"></script>
    <script type="module" src="script.js"></script>
