--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
 
    <button class="btn reload">reload</button>
    
-   <script src="number.js" type="module"></script>
+   <script type="module" src="number.js" ></script>
    <script type="module" src="vars.js"></script>
    <script type="module" src="script.js"></script>
 </body>
