--- a/index.html
+++ b/index.html
@@ -511,11 +511,37 @@
          </div>
       </div>
    </div>
- 
-   <button class="btn start">Start</button>
+   <div class="control__panel">
+      <div class="panel__windows">
+         <div class="bet__window df">
+            <p>BET</p>
+            <div class="bet-display window">1</div>
+         </div>
+         <div class="lines__window df">
+            <p>LINES</p>
+            <div class="lines-display window">1</div>
+         </div>
+         <div class="total-bet__window df"><p>TOTAL BET</p>
+            <div class="total__bet-display window">1</div></div>
+         <div class="winner-paid__window df">
+            <p>WINNER PAID</p>
+            <div class="winner-display window">0</div></div>
+         <div class="credit__window df">
+            <p>CREDIT</p>
+            <div class="credit-display window">1000</div></div>
+      </div>
+      <div class="panel__buttons df">
+         <div class="help__btn pan-btn">HELP</div>
+         <div class="lines__btn pan-btn">LINES</div>
+         <div class="bet__btn pan-btn">BET</div>
+         <div class="double__btn pan-btn">DOUBLE</div>
+         <div class="take-win__btn pan-btn start">START</div>
+      </div>
+   </div>
+   <!-- <button class="btn start">Start</button> -->
 
-   <button class="btn reload">reload</button>
-   
+   <script src="kombination.js" type="module"></script>
+   <script type="module" src="random.js" ></script>
    <script type="module" src="number.js" ></script>
    <script type="module" src="vars.js"></script>
    <script type="module" src="script.js"></script>
